<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_material_light"
    tools:context=".activities.CardActivity"
    tools:ignore="PrivateResource">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarlayout_id"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingtoolbar_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/hs_image"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="exitUntilCollapsed|scroll"
            app:title="Card Name">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="45dp"
                android:orientation="horizontal"
                android:padding="20dp">


                <ImageView
                    android:id="@+id/aa_thumbnail"
                    android:layout_width="100dp"
                    android:layout_height="150dp"
                    android:background="@drawable/loading_shape"
                    android:contentDescription="@string/card_thumbnail" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="177dp"
                    android:layout_margin="4dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/aa_card_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="@string/card_name"
                        android:textColor="@color/White"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/aa_classe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="@string/classe"
                        android:textColor="@color/White"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/aa_artist"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="@string/artist"
                        android:textColor="@color/White"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/aa_flavor"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="1dp"
                        android:layout_marginRight="1dp"
                        android:layout_marginBottom="1dp"
                        android:text="@string/flavor_text"
                        android:textColor="@color/White"
                        android:textStyle="bold" />


                </LinearLayout>


            </LinearLayout>


        </com.google.android.material.appbar.CollapsingToolbarLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/card_background"
        android:padding="5dp"
        android:paddingTop="5dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ImageView
            android:id="@+id/aa_rendered_card"
            android:layout_width="450dp"
            android:layout_height="675dp"
            android:layout_gravity="center"
            android:contentDescription="@string/full_card" />


    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>